@startuml config_models
!theme plain
title Queue Generation - Pydantic Models

' =============================================================================
' Runtime Models (params_models.py)
' =============================================================================

package "Runtime Models (params_models.py)" {

  class QueueInput {
    + parameters : QueueParameters
    + sample_groups : list[SampleGroup]
    --
    + get_all_samples() : list[InputSample]
    + get_primary_container_id() : int
  }

  class QueueParameters {
    + technology : str
    + instrument : str
    + sampler : str
    + output_format : str
    + queue_pattern : str
    + polarity : list[Literal["pos", "neg"]]
    + date : str
    + user : str
    + **method : dict[str, str]**
    + randomization : bool
    + inj_vol_override : float?
    + **qc_frequency_override : int?**
  }

  class SampleGroup {
    + **container_id : int**
    + group_name : str?
    + samples : list[InputSample]
    --
    + effective_name : str {property}
  }

  class InputSample {
    + sample_name : str
    + sample_id : int
    + tube_id : str?
    + position : str?
    + grid_position : str?
    + **grouping_var : str?**
  }

  QueueInput "1" *-- "1" QueueParameters
  QueueInput "1" *-- "1..*" SampleGroup
  SampleGroup "1" *-- "0..*" InputSample

}

' =============================================================================
' Config Models (config_models.py)
' =============================================================================

package "Config Models (config_models.py)" {

  class Combination <<combinations.csv>> {
    + instrument : str
    + sampler : str
    + output_format : str
    + **position_format : str?**
  }

  class QueuePattern <<queue_patterns.toml>> {
    + description : str
    + run_QC_after_n_samples : int
    + start : list[str]
    + middle : list[str]
    + end : list[str]
    + middle_extended : list[str]?
    + middle_extended_frequency_multiplier : int?
    + **separation : list[str]?**
    --
    + effective_separation : list[str] {property}
  }

  class Sample <<samples.csv>> {
    + technology : str
    + sample_id : str
    + sample_name : str
    + description : str
    + inj_vol : float
    + file_name_template : str
  }

  class Instrument <<instruments.csv>> {
    + technology : str
    + instrument : str
    + methods_file : str
  }

  class InstrumentPattern <<instrument_patterns.csv>> {
    + technology : str
    + instrument : str
    + queue_pattern : str
    + is_default : bool
  }

  class OutputFormat <<output_formats.toml>> {
    + description : str
    + file_extension : str
    + columns : dict[str, str]
  }

  class QCLayout <<qc_layouts.toml>> {
    + technology : str
    + sampler_key : str
    + positions : dict[str, QCPosition]
  }

}

' =============================================================================
' Notes
' =============================================================================

note right of QueueParameters
  **method** is now a dict mapping
  polarity to method name:
  {"pos": "DIA_60min", "neg": "DIA_30min"}

  **qc_frequency_override** allows
  runtime override of pattern's
  run_QC_after_n_samples
end note

note right of SampleGroup
  **container_id** moved from
  QueueParameters to SampleGroup
  to support multi-container queues
end note

note right of QueuePattern
  **separation** defines QC block
  inserted between sample groups
  (defaults to middle if not set)
end note

note right of Combination
  **position_format** overrides
  sampler's default position format
  for specific instrument+sampler combos
end note

@enduml
